--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
   "liveSassCompile.settings.formats": [
     {
-      // "format": "expanded",
-      "format": "compressed",
-      // "extensionName": ".css",
-      "extensionName": ".min.css",
+      "format": "expanded",
+      // "format": "compressed",
+      "extensionName": ".css",
+      // "extensionName": ".min.css",
       "savePath": "/css"
     }
   ]
